# Library + layout-flexbox: flex line wrapping fix name convention

--- a/src/scss/theme/_layout-flexbox.scss
+++ b/src/scss/theme/_layout-flexbox.scss
@@ -60,17 +60,17 @@
 // Initial:	nowrap
 // Applies to: flex containers
 
-.flex__wrap,
+.f__wrap,
 .f_wrap {
 	flex-wrap: wrap;
 }
 
-.flex__wrap,
+.f__wrap,
 .f_nowrap {
 	flex-wrap: nowrap;
 }
 
-.flex__wrap-reverse,
+.f__wrap-reverse,
 .f_wrap-reverse {
 	flex-wrap: wrap-reverse;
 }
